Fix about section top cut off issue on wider screens
attempt #2 with minified css oop

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,10 @@
 .disabled-btn {
   pointer-events: none !important; }
 
+@media only screen and (min-width: 1750px) {
+  #about {
+    margin-top: 5%; } }
+
 .section {
   padding: 3%; }
   @media (max-width: 767px) {
